--- a/tcf_website/templates/browse/browse.html
+++ b/tcf_website/templates/browse/browse.html
@@ -12,6 +12,8 @@
         {% include "../common/notification.html" %}
     </div> {% endcomment %}
     <div class="browse container">
+        {% include "../common/review-drive-banner.html" %}
+        <br/>
         {% include "../common/leaderboard_ad.html" with ad_slot="9691204298" %}
 
         <!-- Browse page content -->
