Change review drive tag

--- a/tcf_website/templates/common/review-drive-banner.html
+++ b/tcf_website/templates/common/review-drive-banner.html
@@ -8,7 +8,7 @@
   </p>
   <hr>
   <p class="mb-0 text-inline">
-    To enter, write a review for any class and put the hashtag <b>#tCFspring2021</b> in the description!
+    To enter, write a review for any class and put the hashtag <b>#tCFfall2021</b> in the description!
     <a href="{% url 'new_review' %}" class="btn btn-sm btn-info ml-2">
       Go Review <i class="fa fa-arrow-right" aria-hidden="true"></i>
     </a>
