Review drive is Fall 2021, not Spring

--- a/tcf_website/templates/common/review-drive-banner.html
+++ b/tcf_website/templates/common/review-drive-banner.html
@@ -2,7 +2,7 @@
      class="alert alert-info alert-dismissible text-left fade show">
   <h4 class="alert-heading">Review Drive - Enter to win!</h4>
   <p>
-    Our Spring 2021 review drive is from 11/29 til 12/13.
+    Our Fall 2021 review drive is from 11/29 til 12/13.
     During this time, any review written gives you one entry
     to win a <b>$20 gift card!</b>
   </p>
