--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -229,28 +229,28 @@
                             <div class="form-row">
                                 <div class="form-group col-md-6">
                                     <label for="inputFname">First Name</label>
-                                    <input type="text" class="form-control" id="inputFname" placeholder="Karen">
+                                    <input type="text" class="form-control" id="inputFname" name="fname" placeholder="Jane">
                                 </div>
                                 <div class="form-group col-md-6">
                                     <label for="inputLname">Last Name</label>
-                                    <input type="text" class="form-control" id="inputLname" placeholder="Doe">
+                                    <input type="text" class="form-control" id="inputLname" name="lname" placeholder="Doe">
                                 </div>
                             </div>
                             <div class="form-group">
                                 <label for="inputEmail">Email</label>
-                                <input type="email" class="form-control" id="inputEmail"
+                                <input type="email" class="form-control" id="inputEmail" name="email"
                                        placeholder="youremail@virginia.edu">
                             </div>
                         </div>
                         <div class="col-md-6">
                             <div class="form-group">
                                 <label for="inputTitle">Title</label>
-                                <input type="text" class="form-control" id="inputTitle" placeholder="Message Subject"
+                                <input type="text" class="form-control" id="inputTitle" name="title" placeholder="Message Subject"
                                        required>
                             </div>
                             <div class="form-group">
                                 <label for="inputMessage">Feedback</label>
-                                <textarea type="text" class="form-control" id="inputMessage" rows="6"
+                                <textarea type="text" class="form-control" id="inputMessage" name="message" rows="6"
                                           placeholder="Write your message here..." required></textarea>
                             </div>
                         </div>
