--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -224,6 +224,7 @@
             </div>
             <div class="col-md-10 mx-auto text-left">
                 <form id="feedbackform">
+                    {% csrf_token %}
                     <div class="form-row">
                         <div class="col-md-6">
                             <div class="form-row">
