--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -197,7 +197,7 @@
             {% if display_times %}
             <div class="times-info-container">
                 <div class="info-container" style="padding: 10px 15px; margin: 0;">
-                    <div style="display: flex; align-items: center; justify-content: space-between;" onclick="toggleSections(this)">
+                    <div style="display: flex; align-items: center; justify-content: space-between; cursor: pointer;" onclick="toggleSections(this)">
                         <p class="rating-card-desc" style="margin-bottom: 0; display: flex; align-items: center;">Sections
                             <span style="background-color: var(--secondary-color); color: white; padding: 0 8px; border-radius: 25%; font-size: 12px; margin-left: 7px;">
                                 {{ section_info.sections|length }}
