--- a/tcf_website/templates/search/search.html
+++ b/tcf_website/templates/search/search.html
@@ -58,45 +58,34 @@
                 {% for dept, dept_data in courses.items %}
                 <div class="row mb-5">
                   <div class="col-12">
-                    <!--<h5><a href="{% url 'department' dept_id=dept_data.dept_id %}">{{ dept }} / {{ dept_data.subdept_name }}</a></h5>
-                    <ul class="list-group searched-department-courses">
-                        {% for c in dept_data.courses %}
-                            {% if c != dept_data.courses.0 %}
-                            {% endif %}
-                            <li class="list-group-item list-group-item-light text-dark p-2">
-                              <a href="{% url 'course' mnemonic=c.mnemonic.split.0 course_number=c.number %}">
-                              <div class="row p-0">
-                                <div class="col-md-3">{{ c.mnemonic }}</div>
-                                <div class="col-md-9">{{ c.title }}</div>
-                              </div>
-                              </a>
-                            </li>
-                        {% endfor %}
-                    </ul>-->
                     <h5><a href="{% url 'department' dept_id=dept_data.dept_id %}">{{ dept }} / {{ dept_data.subdept_name }}</a></h5>
                       {% for c in dept_data.courses %}
                         {% if c != dept_data.courses.0 %}
                         {% endif %}
                         <div class="list-group-item list-group-item-light text-dark p-2">
                           <div class="row">
-                            <div class = "col-md-11 align-self-center">
+                            <div class="col-md-11 align-self-center">
                                 <a href="{% url 'course' mnemonic=c.mnemonic.split.0 course_number=c.number %}">
-                                  <div class = "row g-0 ">
-                                    <div class = "col-md-3">{{c.mnemonic}}</div>
-                                    <div class = "col_md_8">{{c.title}}</div>
+                                  <div class="row g-0">
+                                    <div class="col-md-3">{{c.mnemonic}}</div>
+                                    <div class="col_md_8">{{c.title}}</div>
                                   </div>
                                 </a>
                             </div>
-                            <div class = "col-md-1 align-self-center">
+                            <div class="col-md-1 align-self-center">
                               <h5 class="hover-tcf-orange" data-toggle="collapse"
-                                data-target="#description_{{forloop.counter}}"
-                                id="result_{{forloop.counter}}"><i class="fas fa-chevron-down"></i></h5>
+                                data-target="#description_container_{{forloop.counter}}"
+                                id="result_{{forloop.counter}}">
+                                <i class="fas fa-chevron-down" style="vertical-align: middle;"></i>
+                              </h5>
                             </div>
                           </div>
-                          <div class = "collapse" id="description_{{forloop.counter}}">
+                          <div class="collapse" id="description_container_{{forloop.counter}}">
                             <hr>
                             <p>
-                              <b>Course Description: </b>
+                              <small class="text-uppercase search-course-description" style="font-size: 15px;">
+                                Course Description:
+                              </small>
                               {% if c.description|length > 0 %}
                                 {{c.description}}
                               {%else%}
