--- a/tcf_website/templates/department/department.html
+++ b/tcf_website/templates/department/department.html
@@ -16,7 +16,7 @@
         {% include "../common/leaderboard_ad.html" with ad_slot="3719332473" %}
     </div>
     <div class="container-lg">
-        {% include "common/toolbar.html" with breadcrumbs=breadcrumbs active_text=latest_semester hidden_text="Last 5 Years" sorting=True%}
+        {% include "common/toolbar.html" with breadcrumbs=breadcrumbs active_text=latest_semester hidden_text="Last 5 Years" sorting=True page="department" %}
     </div>
     <div class="subdepartments mt-3">
         {% for sd in subdepartments %}
