--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -185,15 +185,14 @@
 
             <div class="grades-container">
                 <div class="chart-container d-flex align-items-center justify-content-center">
-                    <div id = "canvas-parent"><canvas id="myChart"></canvas></div>
+                    <div id="canvas-parent"><canvas id="myChart"></canvas></div>
                 </div>
-                <div class="absolute-center togglepie">
+                <div class="absolute-center" id="toggleinformation">
                     <p class="gpa-text"> No grades found <i class="far fa-frown-open fa-fw"></i></p>
                     <p class="students-text"> &mdash; Students</p>
                 </div>
                 <div class="lower-button">
-                    <button class = "barToPie">Pie</button>
-                    <button class = "pieToBar">Bar</button>
+                    <button type="button" id="toggle-btn" class="btn btn-outline-primary pieToBar" value="bar">Bar</button>
                 </div>
             </div>
         </div>
