Update variable names and reorganize files

--- a/tcf_website/templates/common/toolbar.html
+++ b/tcf_website/templates/common/toolbar.html
@@ -33,7 +33,7 @@
             <button type="button" id="number-sort-btn" class="btn btn-outline-primary active">Course ID &#11014;</button>
             {% endif %}
             {% if page == "courses" %}
-            <button type="button" id="last-taught-sort-btn" class="btn btn-outline-primary active">Last Taught &#11015;</button>
+            <button type="button" id="recency-sort-btn" class="btn btn-outline-primary active">Last Taught &#11015;</button>
             {% endif %}
             <button type="button" id="rating-sort-btn" class="btn btn-outline-primary"> Rating</button>
             <button type="button" id="diff-sort-btn" class="btn btn-outline-primary"> Difficulty</button>
