--- a/tcf_website/templates/department/department.html
+++ b/tcf_website/templates/department/department.html
@@ -37,7 +37,7 @@
 
 {% block js %}
 <script type="module" src="{% static 'common/bind-show-hide.js' %}"></script>
-<script type="module" src="{% static 'department/bind-sort.js' %}"></script>
+<script type="module" src="{% static 'common/bind-sort.js' %}"></script>
 <script type="module">
     import { loadPage } from "{% static 'department/loadMoreCourses.js' %}";
 
