--- a/tcf_website/templates/course/course.html
+++ b/tcf_website/templates/course/course.html
@@ -89,7 +89,7 @@
 
 {% block js %}
     <script type="module" src="{% static 'common/bind-show-hide.js' %}"></script>
-    <script type="module" src="{% static 'department/bind-sort.js' %}"></script>
+    <script type="module" src="{% static 'common/bind-sort.js' %}"></script>
 
     {#initializes Bootstrap tooltip#}
     <script>
