Added modal to new review button

--- a/tcf_website/templates/base/index.html
+++ b/tcf_website/templates/base/index.html
@@ -44,6 +44,7 @@
 
   <!-- Login modal -->
   {% include "login/login_modal.html" %}
+  {% include "login/new_review_login_modal.html" %}
 
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-54T5TXX"
