--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -102,7 +102,11 @@
             </div>
 
             <div class="col-lg-4">
+                {% if user.is_authenticated %}
                 <a href="{% url 'new_review' %}" class="link-unstyled">
+                {% else %}
+                <a href="#newReviewLoginModal" data-toggle="modal" class="link-unstyled">
+                {% endif %}
                     <div class="card mx-sm-3 my-3">
                         <div class="card-body features-icons-item mx-auto mb-2">
                             <div class="features-icons-icon d-flex">
