--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -32,8 +32,8 @@
                       <h4 class="m-0 text-tcf-indigo"
                           tabindex="0" data-toggle="tooltip" data-placement="bottom"
                           title="View instructor profile">
-                        <i class="fa fa-user" aria-hidden="true"></i>
-                          {{ instructor.last_name }}, {{ instructor.first_name }}
+                        <i class="mr-2 fa fa-user mt-3" aria-hidden="true"></i>
+                        <p class = "instructor-select p-1 btn-lg float-right">{{ instructor.last_name }}, {{ instructor.first_name }}</p>
                       </h4>
                     </a>
 
@@ -44,7 +44,7 @@
                          aria-haspopup="true" aria-expanded="false">
                       </a>
 
-                      <div id="instructorMenu" class="instructor-menu dropdown-menu w-100" aria-labelledby="dropdownMenuLink" disabled>
+                      <div id="instructorMenu" class="instructor-menu dropdown-menu w-200" aria-labelledby="dropdownMenuLink" disabled>
                         <!-- To be populated by instr_data.js script -->
                       </div>
                     </div>
