Improved ui further

--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -39,9 +39,9 @@
 
                     <!-- Instructor Dropdown -->
                     <div class="instructor dropdown">
-                      <a class="instructor-select btn btn-lg text-tcf-orange p-0 mt-1 dropdown-toggle" href="#"
+                      <a class="instructor-dropdown btn btn-sm btn-outline-primary text-tcf-orange mt-2" href="#"
                          role="button" id="dropdownMenuLink" data-toggle="dropdown"
-                         aria-haspopup="true" aria-expanded="false">
+                         aria-haspopup="true" aria-expanded="false">▼
                       </a>
 
                       <div id="instructorMenu" class="instructor-menu dropdown-menu w-200" aria-labelledby="dropdownMenuLink" disabled>
