Improved modal call and reduced duplicate code

--- a/tcf_website/templates/login/login_modal.html
+++ b/tcf_website/templates/login/login_modal.html
@@ -1,6 +1,6 @@
 <!-- Login modal (imported in index.html) -->
 {% load static %}
-<div class="modal fade" id="loginModal" tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
+<div class="modal fade" id={{path_id}} tabindex="-1" role="dialog" aria-labelledby="deleteModalLabel" aria-hidden="true">
   <div class="modal-dialog" role="document">
     <div class="modal-content">
       <div class="modal-header">
