--- a/tcf_website/templates/base/index.html
+++ b/tcf_website/templates/base/index.html
@@ -43,8 +43,7 @@
   {% block body %}{% endblock %}
 
   <!-- Login modal -->
-  {% include "login/login_modal.html" %}
-  {% include "login/new_review_login_modal.html" %}
+  {% include "login/login_modal.html" with path_id="loginModal" path=request.get_full_path %}
 
   <!-- Google Tag Manager (noscript) -->
   <noscript><iframe src="https://www.googletagmanager.com/ns.html?id=GTM-54T5TXX"
