--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -105,7 +105,8 @@
                 {% if user.is_authenticated %}
                 <a href="{% url 'new_review' %}" class="link-unstyled">
                 {% else %}
-                <a href="#newReviewLoginModal" data-toggle="modal" class="link-unstyled">
+                {% include "login/login_modal.html" with path="/reviews/new" path_id="reviewLoginModal" %}
+                <a href="#reviewLoginModal" data-toggle="modal" class="link-unstyled">
                 {% endif %}
                     <div class="card mx-sm-3 my-3">
                         <div class="card-body features-icons-item mx-auto mb-2">
