--- a/tcf_website/templates/login/login_button.html
+++ b/tcf_website/templates/login/login_button.html
@@ -9,7 +9,7 @@
     <!-- Redirect back to same page only if not on login error page -->
     {% if view_name != 'tcf_website.views.auth.login_error' %}
         <a class="login-button-wrapper"
-           href="{% url 'social:begin' 'google-oauth2' %}?next={{request.get_full_path}}">
+           href="{% url 'social:begin' 'google-oauth2' %}?next={{path}}">
             <button class="login-button"></button>
         </a>
     {% else %}
