Add documentation and condense sorting functions

--- a/tcf_website/templates/common/toolbar.html
+++ b/tcf_website/templates/common/toolbar.html
@@ -29,10 +29,10 @@
         {% if sorting %}
         <div id="sortButtons" class="btn-group btn-group-sm"
              role="toolbar" aria-label="Sorting Buttons">
-            {% if page == "department" %}
+            {% if 'department' in request.path %}
             <button type="button" id="number-sort-btn" class="btn btn-outline-primary active">Course ID &#11014;</button>
             {% endif %}
-            {% if page == "courses" %}
+            {% if 'course' in request.path %}
             <button type="button" id="recency-sort-btn" class="btn btn-outline-primary active">Last Taught &#11015;</button>
             {% endif %}
             <button type="button" id="rating-sort-btn" class="btn btn-outline-primary"> Rating</button>
