--- a/tcf_website/templates/course/course.html
+++ b/tcf_website/templates/course/course.html
@@ -17,7 +17,7 @@
             {% include "../common/leaderboard_ad.html" with ad_slot="9533576562" %}
         </div>
         <div class="container-lg">
-            {% include "common/toolbar.html" with breadcrumbs=breadcrumbs active_text=latest_semester hidden_text="All" sorting=True page="courses" %}
+            {% include "common/toolbar.html" with breadcrumbs=breadcrumbs active_text=latest_semester hidden_text="All" sorting=True %}
         </div>
 
         <div class="instructors container-lg mt-3">
