Chooses between instructor or courses
Defaults to courses if four letters or less, because it's likely an abbreviation. If not added, would always default to instructors.

--- a/tcf_website/templates/search/search.html
+++ b/tcf_website/templates/search/search.html
@@ -24,12 +24,21 @@
           <div class="col-12">
             <div class="btn-group btn-group-sm" role="toolbar">
               <a class="btn bg-tcf-indigo text-white" disabled>See results for</a>
+              {% if courses_first %}
               <a href="#courses" id="course-tab" class="btn btn-light collapsed" autofocus
                  role="button" data-toggle="collapse" aria-expanded="true" aria-controls="courses">
                  Courses</a>
               <a href="#instructors" id="instructor-tab" class="btn btn-light collapsed"
                  role="button" data-toggle="collapse" aria-expanded="false" aria-controls="instructors">
                  Instructors</a>
+              {% else %}
+              <a href="#courses" id="course-tab" class="btn btn-light collapsed"
+                 role="button" data-toggle="collapse" aria-expanded="false" aria-controls="courses">
+                 Courses</a>
+              <a href="#instructors" id="instructor-tab" class="btn btn-light collapsed" autofocus
+                 role="button" data-toggle="collapse" aria-expanded="true" aria-controls="instructors">
+                 Instructors</a>
+              {% endif %}
               <a href="#departments" id="department-tab" class="btn btn-light collapsed"
                 role="button" data-toggle="collapse" aria-expanded="false" aria-controls="departments">
                  Departments</a>
@@ -41,8 +50,13 @@
         <div id="results" class="accordion">
 
           <!-- Course results -->
+          {% if courses_first %}
           <div id="courses" class="row mb-5 collapse show"
                aria-labelledby="course-tab" data-parent="#results">
+          {% else %}
+           <div id="courses" class="row mb-5 collapse"
+               aria-labelledby="course-tab" data-parent="#results">
+          {% endif %}
             <div class="col-12">
 
               <div class="search-result-header mb-3">
@@ -105,8 +119,14 @@
           </div>
 
           <!-- Instructor results -->
+          {% if courses_first %}
           <div id="instructors" class="row mb-5 collapse"
                aria-labelledby="instructor-tab" data-parent="#results">
+          {% else %}
+          <div id="instructors" class="row mb-5 collapse show"
+             aria-labelledby="instructor-tab" data-parent="#results">
+          {% endif %}
+
             <div class="col-12">
               <div class="search-result-header mb-3">
                 <h3 class="mr-3">Instructors</h3>
