interest meeting+roster updates

--- a/tcf_website/templates/common/application_banner.html
+++ b/tcf_website/templates/common/application_banner.html
@@ -2,16 +2,18 @@
      class="alert alert-info alert-dismissible text-left fade show">
   <h4 class="alert-heading">Apply to the team!</h4>
   <p>
-    Our Fall 2021 recruitment has started up! Applications will be open from 09/03 to 09/24. We are looking for UVA students
-    for both our dev and design/marketing teams who are committed to helping make the site better. Students of any year,
-    background, and experience are welcome to apply.
+    Our Fall 2022 recruitment has started up! We are looking for UVA students for both our dev and design/marketing teams 
+    who are committed to helping make the site better. Come to our interest meeting this <b><u>Thursday (9/1) 7pm in Olsson 120</u></b> 
+    for more information about the team and open positions!
+    <!-- Students of any year, background, and experience are welcome to apply. -->
   </p>
   <hr>
   <p class="mb-0 text-inline">
-    To learn more and join the team, submit an application!
+    Stay posted for application details soon...
+    <!-- To learn more and join the team, submit an application!
     <a href="https://docs.google.com/forms/d/e/1FAIpQLScHIB3uqf2qVKp7gMTdPSMYK4yUg1wotXht_-j-9yRQ3_y-uw/viewform" class="btn btn-sm btn-info ml-2">
       Apply here <i class="fa fa-arrow-right" aria-hidden="true"></i>
-    </a>
+    </a> -->
   </p>
 
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
