--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -53,6 +53,7 @@
     <header class="masthead text-center">
         <div class="row">
             <div class="col-xl-8 mx-auto py-4">
+                {% include "../common/application_banner.html" %}
                 <div class="about-logo row justify-content-center">
                     <img src="{% static 'base/img/new_logo.png' %}" alt="theCourseForum logo"
                          height="150px">
@@ -149,10 +150,12 @@
                                 </div>
                             </div>
                         {% endfor %}
-                        <div class="col-6 col-md-3">
+                    </div>
+                    <div class="row text-center">
+                        <div class="col">
                             <a href="{% url 'about' %}" class="link-unstyled">
-                                <div class="about-link card bg-tcf-orange mt-3 mx-1">
-                                    <div class="card-body mx-auto py-5">
+                                <div class="about-link card bg-tcf-orange mx-1">
+                                    <div class="card-body mx-auto">
                                         <p class="card-text text-white text-left">
                                             Meet the full team
                                             <i class="fa fa-arrow-right" aria-hidden="true"></i>
