Added application form link

--- a/tcf_website/templates/common/application_banner.html
+++ b/tcf_website/templates/common/application_banner.html
@@ -9,11 +9,10 @@
   </p>
   <hr>
   <p class="mb-0 text-inline">
-    Stay posted for application details soon...
-    <!-- To learn more and join the team, submit an application!
-    <a href="https://docs.google.com/forms/d/e/1FAIpQLScHIB3uqf2qVKp7gMTdPSMYK4yUg1wotXht_-j-9yRQ3_y-uw/viewform" class="btn btn-sm btn-info ml-2">
+    To learn more and join the team, submit an application!
+    <a href="https://forms.gle/pnz9drH8oj1PGvha6" class="btn btn-sm btn-info ml-2">
       Apply here <i class="fa fa-arrow-right" aria-hidden="true"></i>
-    </a> -->
+    </a>
   </p>
 
   <button type="button" class="close" data-dismiss="alert" aria-label="Close">
