--- a/tcf_website/templates/browse/browse.html
+++ b/tcf_website/templates/browse/browse.html
@@ -12,7 +12,7 @@
         {% include "../common/notification.html" %}
     </div> {% endcomment %}
     <div class="browse container">
-        <!-- Application Banner {% include "../common/application_banner.html" %} -->
+        {% include "../common/application_banner.html" %}
         <br/>
         {% include "../common/leaderboard_ad.html" with ad_slot="9691204298" %}
 
