--- a/tcf_website/templates/landing/landing.html
+++ b/tcf_website/templates/landing/landing.html
@@ -53,7 +53,7 @@
     <header class="masthead text-center">
         <div class="row">
             <div class="col-xl-8 mx-auto py-4">
-                <!-- Application Banner {% include "../common/application_banner.html" %} -->
+                {% include "../common/application_banner.html" %}
                 <div class="about-logo row justify-content-center">
                     <img src="{% static 'base/img/new_logo.png' %}" alt="theCourseForum logo"
                          height="150px">
