fixed chart resizing

--- a/tcf_website/templates/course/course_professor.html
+++ b/tcf_website/templates/course/course_professor.html
@@ -187,11 +187,11 @@
                     <div class="chart-container d-flex align-items-center justify-content-center">
                         <div id="canvas-parent"><canvas id="myChart"></canvas></div>
                     </div>
-                    <div class="absolute-center" id="toggleinformation">
+                    <div class="absolute-center" id="chart-label">
                         <p class="gpa-text"> No grades found <i class="far fa-frown-open fa-fw"></i></p>
                         <p class="students-text"> &mdash; Students</p>
                     </div>
-                    <div class="lower-button">
+                    <div class="chart-button">
                         <button type="button" id="toggle-btn" class="btn btn-outline-primary pieToBar" value="bar">Bar</button>
                     </div>
                 </div>
