--- a/tcf_website/static/course/course_professor.css
+++ b/tcf_website/static/course/course_professor.css
@@ -56,7 +56,7 @@
     position: relative;
 }
 
-.lower-button{
+.chart-button{
    position: absolute;
    bottom: 10px;
    right: 10px;
@@ -177,6 +177,10 @@
 }
 
 @media (max-width: 1100px) {
+    .chart-container { 
+        max-width: 600px; 
+    }
+
     .grades-ratings-container {
       flex-direction: column;
       height: 650px;
