--- a/tcf_website/templates/profile/profile.html
+++ b/tcf_website/templates/profile/profile.html
@@ -33,6 +33,7 @@
                     </div>
                     <input type="submit" class="btn btn-primary mt-3" value="Save Profile">
                 </form>
+                {% include "profile/delete_confirm_modal.html" with profile=profile %}
             </div>
         </div>
     </div>
